Add one more line for charter

--- a/charter.adoc
+++ b/charter.adoc
@@ -40,12 +40,19 @@ the psABI specification.
 
 4. Make space for custom extensions to avoid conflicts.
 
+5. Define and explore potential requirements for different ABI variantes.
 
 == Document history
 [cols="<1,<2,<3,<4",options="header,pagewidth",]
-ht|================================================================================
+|================================================================================
 | _Revision_ | _Date_            | _Author_ | _Modification_
-| 0.01      | 2x March 2021  |
+| 0.02      | 24 July 2021  |
+
+Kito Cheng |
+
+Add one more item to goal for including different ABI variantes.
+
+| 0.01      | 23 March 2021  |
 
 Kito Cheng,
 Jessica Clarke |
